deployment/viewer-sensrnet-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    app: viewer-sensrnet
  name: viewer-sensrnet
  namespace: sensrnet-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: viewer-sensrnet
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.19.0 (f63a961c)
      creationTimestamp: null
      labels:
        app: viewer-sensrnet
    spec:
      containers:
      - image: sensrnetregistry.azurecr.io/sensrnet-viewer:202006120933
        name: viewer-sensrnet
        ports:
        - containerPort: 4200
        resources: {}
      restartPolicy: Always
status: {}
