deployment/viewer-sensrnet-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    app: viewer-sensrnet
  name: viewer-sensrnet
  namespace: sensrnet-frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 4200
  selector:
    app: viewer-sensrnet
# status:
#   loadBalancer: {}
