deployment/registry-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: registry-frontend
  name: registry-frontend
  namespace: sensrnet-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: registry-frontend
    spec:
      containers:
      - image: sensrnetregistry.azurecr.io/sensrnet/registry-frontend:0.0.8
        name: registry-frontend
        ports:
        - containerPort: 4200
        resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: registry-frontend
  name: registry-frontend
  namespace: sensrnet-frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 4200
  selector:
    app: registry-frontend
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry-frontend-ingress
  namespace: sensrnet-frontend
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/preserve-host: "true"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: registry-frontend
          servicePort: 80
        path: /
